--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -2304,7 +2304,7 @@ then {11,99 TRY/Month}*/
 "gamification_raffle_summary" = "عرض نظرة عامة على السحب";
 "gamification_event_not_trigerred" = "لم يتم استخدام هذه الميزة بعد. جربها الآن!";
 "gamification_event_trigger_count" = "You Have %d Raffle Rights";
-"gamification_event_completed" = "لقد أكملت حقوقك في هذا الشهر %@.";
+"gamification_event_completed" = "لقد أكملت حقوقك في هذا %@.";
 "gamification_total_count" = "لقد فزت بإجمالي %d حقوق السحب.";
 "gamification_campaign_conditions" = "معلومات الحملة";
 "gamification_rules" = "شروط وأحكام السحب";
@@ -2334,3 +2334,5 @@ then {11,99 TRY/Month}*/
 "timeline_description" = "لقد أعددنا لك مفاجأة من الذكريات التي احتفظت بها في lifebox هذا الشتاء. اكتشف الآن.";
 "photo_max_selection_title_x" = "";
 "photo_max_selection_body_x" = "";
+"right" = "";
+"rights" = "";
