--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -2356,7 +2356,7 @@ then {11,99 TRY/Month}*/
 "gamification_raffle_summary" = "See Raffle Summary";
 "gamification_event_not_trigerred" = "This feature has not been used yet.Try now!";
 "gamification_event_trigger_count" = "You Have %d Raffle Rights";
-"gamification_event_completed" = "You have completed your rights this %@ month.";
+"gamification_event_completed" = "You have completed your rights this %@.";
 "gamification_total_count" = "You Won a Total of %d Raffle Rights.";
 "gamification_campaign_conditions" = "Campaign Details";
 "gamification_rules" = "Raffle Eligibility";
@@ -2392,3 +2392,5 @@ then {11,99 TRY/Month}*/
 
 /*Fuzzy*/
 "photo_max_selection_body_x" = "You can send a maximum of %@ photos for printing.";
+"right" = "right";
+"rights" = "rights";
